Add css rules about outer/inner spin-btn #9

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -29,7 +29,7 @@
                 transition: .3s ease;
             }
             &:hover {
-                &::after {
+                &:after {
                     transform: rotate(90deg);
                 }
             }
