--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -121,6 +121,8 @@ body {
     }
 }
 
+// INPUT stuff
+
 input,
 textarea,
 select {
@@ -133,6 +135,17 @@ select {
     height: 4.5rem;
     border: 1px solid $grey;
     padding: 1.2rem 1.5rem;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+}
+
+input[type="number"] {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 input[type="checkbox"] {
