Get FigurineItem with Redux Store + css (Figurine Item 50%) #12

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
 @import './settings';
 @import './components/_header';
 @import './components/form';
+@import './components/FigurinesList';
+@import './components/FigurineItem';
