--- a/src/styles/components/_FigurineItem.scss
+++ b/src/styles/components/_FigurineItem.scss
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     border: 1px solid $grey;
     padding: 3rem;
     border-radius: .8rem;
@@ -13,24 +14,95 @@
             color: $purple;
             font-weight: 100;
         }
+        .category {
+            font-size: $dmsansregular;
+            color: $orange;
+            font-size: 2.4rem;
+            margin-top: 1.5rem;
+            span {
+                color: white;
+                font-family: $dmsansitalic;
+                font-size: 2rem;
+            }
+        }
+        .description {
+            margin-top: 1rem;
+        }
     }
     .bottom-card {
         display: flex;
         justify-content: space-between;
         .left {
-            align-self: flex-end;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .date {
+                margin-bottom: 1.9rem;
+                &::before {
+                    content: url('../../../public/img/icons/calendar.svg');
+                    vertical-align: top;
+                    margin-right: 1rem;
+                }
+            }
+            .checkbox-style {
+                margin-top: .5rem;
+                display: flex;
+                align-items: center;
+                span {
+                    display: inline-block;
+                    width: 2rem;
+                    height: 2rem;
+                    background-color: $background;
+                    border-radius: .4rem;
+                    border: 1px solid $white;
+                    margin-right: 1.5rem;
+                }
+                .active {
+                    background-color: white;
+                }
+            }
         }
         img {
+            position: absolute;
+            bottom: 3rem;
+            right: 3rem;
             width: 17rem;
             height: 13rem;
             object-fit: cover;
             border-radius: .8rem;
             cursor: pointer;
-            transition: .3s ease;
+            transition: .5s ease;
             &:hover {
-                transform: translateY(-10px);
-                box-shadow: 0px 16px 70px 0px rgba(255, 255, 255, .1);
+                box-shadow: 0px 16px 70px 0px rgba(255, 255, 255, .2);
             }
         }
+        .imgFullBackground {
+            position: absolute;
+            z-index: 10;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    // .settings-icons {
+    //     position: absolute;
+    //     right: 3rem;
+    //     display:inline-block;
+    //     width: 20px;
+    //     height: 20px;
+    //     background-image: url('../../../public/img/icons/settings.svg');
+    //     background-size: cover;
+    //     cursor: pointer;
+    //     &:hover{
+    //         box-shadow: 0px 16px 70px 0px rgba(255, 255, 255, .2);
+    //         background-image: url('../../../public/img/icons/settings-white.svg');
+    //     }
+    // }
+    .settings-icons {
+        position: absolute;
+        width: 2rem;
+        right: 3rem;
+        cursor: pointer;
     }
 }
