--- a/src/styles/components/_FigurineItem.scss
+++ b/src/styles/components/_FigurineItem.scss
@@ -85,24 +85,18 @@
             height: 100%;
         }
     }
-    // .settings-icons {
-    //     position: absolute;
-    //     right: 3rem;
-    //     display:inline-block;
-    //     width: 20px;
-    //     height: 20px;
-    //     background-image: url('../../../public/img/icons/settings.svg');
-    //     background-size: cover;
-    //     cursor: pointer;
-    //     &:hover{
-    //         box-shadow: 0px 16px 70px 0px rgba(255, 255, 255, .2);
-    //         background-image: url('../../../public/img/icons/settings-white.svg');
-    //     }
-    // }
-    .settings-icons {
+    svg {
         position: absolute;
-        width: 2rem;
         right: 3rem;
         cursor: pointer;
+        path {
+            transition: .3s ease;
+        }
+        &:hover {
+            path {
+                stroke: #fff;
+                stroke-width: 1.2px;
+            }
+        }
     }
 }
