--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,4 +1,5 @@
 .header-container {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,4 +39,22 @@
     img {
         margin-right: -7rem;
     }
+    .folder {
+        position: absolute;
+        right: 32%;
+        top: 30%;
+        animation: float 4s ease-in-out infinite;
+    }
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-20px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
 }
