--- a/src/styles/components/_FigurineItem.scss
+++ b/src/styles/components/_FigurineItem.scss
@@ -89,6 +89,7 @@
         position: absolute;
         right: 3rem;
         cursor: pointer;
+        z-index: 2;
         path {
             transition: .3s ease;
         }
@@ -96,6 +97,66 @@
             path {
                 stroke: #fff;
                 stroke-width: 1.2px;
+            }
+        }
+    }
+    .actions-container {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: .8rem;
+        background-color: $background;
+        top: 0;
+        right: 0;
+        width: 0rem;
+        height: 0rem;
+        overflow: hidden;
+        border-radius: 50%;
+        transition: .8s ease;
+        .modify-btn {
+            margin-right: 2rem;
+            opacity: 0;
+        }
+        .delete-btn {
+            opacity: 0;
+        }
+    }
+    .show {
+        z-index: 10;
+        top: 0;
+        right: 0;
+        border-radius: .8rem;
+        width: 100%;
+        height: 100%;
+        .modify-btn {
+            display: flex;
+            align-items: center;
+            opacity: 1;
+            &:after {
+                content: '';
+                display: inline-block;
+                width: 1.5rem;
+                height: 1.5rem;
+                background-image: url('../../../public/img/icons/edit.svg');
+                background-size: cover;
+                background-repeat: no-repeat;
+                margin-left: 1rem;
+            }
+        }
+        .delete-btn {
+            opacity: 1;
+            display: flex;
+            align-items: center;
+            &:after {
+                content: '';
+                display: inline-block;
+                width: 1.5rem;
+                height: 1.5rem;
+                background-image: url('../../../public/img/icons/trash.svg');
+                background-size: cover;
+                background-repeat: no-repeat;
+                margin-left: 1rem;
             }
         }
     }
